# btstack-rs

./: .gitmodules  Cargo.toml  README.md
btstack/: Cargo.toml
btstack-gatt/: Cargo.toml
btstack-gatt/src/: gatt_counter.rs  gatt_counter_main.rs  lib.rs  peripheral.rs  runtime.rs
btstack-hci-transport-nusb/: Cargo.toml
btstack-hci-transport-nusb/src/: constants.rs  io.rs  lib.rs  state.rs  types.rs  usb.rs
btstack-sys/: Cargo.toml  build.rs
btstack-sys/cmake/btstack-core-only/: CMakeLists.txt  btstack_config.h
btstack-sys/include/: btstack_stub.h  wrapper_libusb_main.h
btstack-sys/scripts/: gen_libusb_bindings.sh
btstack-sys/src/: att_db.rs  att_server.rs  bluetooth.rs  btstack_defines.rs  btstack_memory.rs  btstack_run_loop.rs  ffi.rs  gap.rs  hci.rs  hci_cmd.rs  hci_transport.rs  l2cap.rs  lib.rs  sm.rs  stub_btstack.c
btstack-sys/tests/: native_link.rs
btstack/src/: lib.rs
